src/objects/TestObject__c.object
<CustomObject>
    <fields>
        <fullName>AnTestObject_Field__c</fullName>
        <label>AnTestObject Field</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AnotherTestObject_Field__c</fullName>
        <label>AnotherTestObject Field</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TestObject_Field__c</fullName>
        <label>TestObject Field</label>
        <type>TextArea</type>
    </fields>
    <label>TestObject</label>
    <nameField>
        <label>TestObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TestObjects3</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>